@@ -61,3 +61,8 @@
 		<!-- ###BROKENLINKS_ITEM### end -->
 	</table>
 <!-- ###BROKENLINKS_CONTENT### end -->
+
+<!-- ###NOBROKENLINKS_CONTENT### begin -->
+	###LIST_HEADER###
+	<p>###NO_BROKEN_LINKS###</p>
+<!-- ###NOBROKENLINKS_CONTENT### end -->
